--- a/pom.xml
+++ b/pom.xml
@@ -24,40 +24,19 @@
     <artifactId>org.wso2.carbon.connector.blogger</artifactId>
     <packaging>jar</packaging>
     <version>1.0.0</version>
-    <name>WSO2 Carbon - Blogger API ESB Connector</name>
+    <name>WSO2 Carbon - Mediation Library Connector For Google Blogger</name>
     <url>http://wso2.org</url>
     <properties>
         <connector.name>blogger</connector.name>
         <connector.version>1.0.0</connector.version>
-        <test.framework.version>4.2.0</test.framework.version>
         <esb.version>4.9.0</esb.version>
-        <carbon.kernel.version>4.4.1</carbon.kernel.version>
-        <emma.version>2.1.5320</emma.version>
+        <test.framework.version>4.2.0</test.framework.version>
         <synapse.version>2.1.3-wso2v11</synapse.version>
         <carbon.mediation.version>4.4.10</carbon.mediation.version>
         <json.version>2.0.0.wso2v1</json.version>
-        <carbon.integration.framework>4.0.0</carbon.integration.framework>
-        <commons.digester.version>2.1</commons.digester.version>
-        <groovy.version>1.1-rc-1</groovy.version>
-        <jruby.version>1.3.0</jruby.version>
-        <org.testng.version>6.1.1</org.testng.version>
         <integration.base.version>1.0.1</integration.base.version>
-        <hapi.version>2.1.0.wso2v1</hapi.version>
-        <jms.spec.version>1.1.0</jms.spec.version>
-        <mysql.version>5.1.6</mysql.version>
-        <activemq.version>5.2.0</activemq.version>
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>org.wso2.carbon.mediation</groupId>
-            <artifactId>org.wso2.carbon.mediation.initializer</artifactId>
-            <version>${carbon.mediation.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.synapse</groupId>
-            <artifactId>synapse-core</artifactId>
-            <version>${synapse.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.apache.synapse</groupId>
             <artifactId>synapse-commons</artifactId>
@@ -69,33 +48,14 @@
             <version>${json.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.synapse</groupId>
+            <artifactId>synapse-core</artifactId>
+            <version>${synapse.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.wso2.carbon.mediation</groupId>
             <artifactId>org.wso2.carbon.connector.core</artifactId>
             <version>${carbon.mediation.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon.mediation</groupId>
-            <artifactId>org.wso2.carbon.mediation.library.stub</artifactId>
-            <version>${carbon.mediation.version}</version>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>servlet-api</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.integration.framework</artifactId>
-            <version>${carbon.integration.framework}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>commons-digester</groupId>
-            <artifactId>commons-digester</artifactId>
-            <version>${commons.digester.version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.automation</groupId>
@@ -113,61 +73,6 @@
             <groupId>org.wso2.carbon.automation</groupId>
             <artifactId>org.wso2.carbon.automation.utils</artifactId>
             <version>${test.framework.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>groovy</groupId>
-            <artifactId>groovy-all</artifactId>
-            <version>${groovy.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jruby</groupId>
-            <artifactId>jruby-complete</artifactId>
-            <version>${jruby.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>emma</groupId>
-            <artifactId>emma</artifactId>
-            <version>${emma.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>${org.testng.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>SecVerifier</artifactId>
-            <version>${carbon.kernel.version}</version>
-            <type>aar</type>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-core</artifactId>
-            <version>${activemq.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>ca.uhn.hapi.wso2</groupId>
-            <artifactId>hapi</artifactId>
-            <version>${hapi.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.esb</groupId>
-            <artifactId>org.wso2.carbon.esb.common</artifactId>
-            <version>4.8.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
